archive/parser/tests/snapshots/statements/valid/0055@2.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: select 1 union select 2;
---
Parse {
    cst: SourceFile@0..24
      SelectStmt@0..24
        Select@0..6 "select"
        Whitespace@6..7 " "
        SelectStmt@7..8
          ResTarget@7..8
            AConst@7..8
              Iconst@7..8 "1"
        Whitespace@8..9 " "
        Union@9..14 "union"
        Whitespace@14..15 " "
        SelectStmt@15..23
          Select@15..21 "select"
          Whitespace@21..22 " "
          ResTarget@22..23
            AConst@22..23
              Iconst@22..23 "2"
        Ascii59@23..24 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopUnion,
                    all: false,
                    larg: Some(
                        SelectStmt {
                            distinct_clause: [],
                            into_clause: None,
                            target_list: [
                                Node {
                                    node: Some(
                                        ResTarget(
                                            ResTarget {
                                                name: "",
                                                indirection: [],
                                                val: Some(
                                                    Node {
                                                        node: Some(
                                                            AConst(
                                                                AConst {
                                                                    isnull: false,
                                                                    location: 7,
                                                                    val: Some(
                                                                        Ival(
                                                                            Integer {
                                                                                ival: 1,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                                location: 7,
                                            },
                                        ),
                                    ),
                                },
                            ],
                            from_clause: [],
                            where_clause: None,
                            group_clause: [],
                            group_distinct: false,
                            having_clause: None,
                            window_clause: [],
                            values_lists: [],
                            sort_clause: [],
                            limit_offset: None,
                            limit_count: None,
                            limit_option: Default,
                            locking_clause: [],
                            with_clause: None,
                            op: SetopNone,
                            all: false,
                            larg: None,
                            rarg: None,
                        },
                    ),
                    rarg: Some(
                        SelectStmt {
                            distinct_clause: [],
                            into_clause: None,
                            target_list: [
                                Node {
                                    node: Some(
                                        ResTarget(
                                            ResTarget {
                                                name: "",
                                                indirection: [],
                                                val: Some(
                                                    Node {
                                                        node: Some(
                                                            AConst(
                                                                AConst {
                                                                    isnull: false,
                                                                    location: 22,
                                                                    val: Some(
                                                                        Ival(
                                                                            Integer {
                                                                                ival: 2,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                                location: 22,
                                            },
                                        ),
                                    ),
                                },
                            ],
                            from_clause: [],
                            where_clause: None,
                            group_clause: [],
                            group_distinct: false,
                            having_clause: None,
                            window_clause: [],
                            values_lists: [],
                            sort_clause: [],
                            limit_offset: None,
                            limit_count: None,
                            limit_option: Default,
                            locking_clause: [],
                            with_clause: None,
                            op: SetopNone,
                            all: false,
                            larg: None,
                            rarg: None,
                        },
                    ),
                },
            ),
            range: 0..23,
        },
    ],
}
