archive/parser/tests/snapshots/statements/valid/0057@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
assertion_line: 62
description: TRUNCATE accounts CASCADE;
---
Parse {
    cst: SourceFile@0..26
      TruncateStmt@0..26
        Truncate@0..8 "TRUNCATE"
        Whitespace@8..9 " "
        RangeVar@9..17
          Ident@9..17 "accounts"
        Whitespace@17..18 " "
        Cascade@18..25 "CASCADE"
        Ascii59@25..26 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: TruncateStmt(
                TruncateStmt {
                    relations: [
                        Node {
                            node: Some(
                                RangeVar(
                                    RangeVar {
                                        catalogname: "",
                                        schemaname: "",
                                        relname: "accounts",
                                        inh: true,
                                        relpersistence: "p",
                                        alias: None,
                                        location: 9,
                                    },
                                ),
                            ),
                        },
                    ],
                    restart_seqs: false,
                    behavior: DropCascade,
                },
            ),
            range: 0..25,
        },
    ],
}
