archive/parser/tests/snapshots/statements/valid/advisory_lock@23.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "-- releasing all session locks\nSELECT pg_advisory_unlock_all();"
---
Parse {
    cst: SourceFile@0..63
      SqlComment@0..30 "-- releasing all sess ..."
      Newline@30..31 "\n"
      SelectStmt@31..63
        Select@31..37 "SELECT"
        Whitespace@37..38 " "
        ResTarget@38..60
          FuncCall@38..60
            Ident@38..60 "pg_advisory_unlock_all"
        Ascii40@60..61 "("
        Ascii41@61..62 ")"
        Ascii59@62..63 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    FuncCall(
                                                        FuncCall {
                                                            funcname: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "pg_advisory_unlock_all",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            args: [],
                                                            agg_order: [],
                                                            agg_filter: None,
                                                            over: None,
                                                            agg_within_group: false,
                                                            agg_star: false,
                                                            agg_distinct: false,
                                                            func_variadic: false,
                                                            funcformat: CoerceExplicitCall,
                                                            location: 7,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 30..62,
        },
    ],
}
