archive/parser/tests/snapshots/statements/valid/lseg@14.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: select * from LSEG_TBL;
---
Parse {
    cst: SourceFile@0..23
      SelectStmt@0..23
        Select@0..6 "select"
        Whitespace@6..7 " "
        ResTarget@7..8
          ColumnRef@7..8
            AStar@7..8
              Ascii42@7..8 "*"
        Whitespace@8..9 " "
        From@9..13 "from"
        Whitespace@13..14 " "
        RangeVar@14..22
          Ident@14..22 "LSEG_TBL"
        Ascii59@22..23 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    ColumnRef(
                                                        ColumnRef {
                                                            fields: [
                                                                Node {
                                                                    node: Some(
                                                                        AStar(
                                                                            AStar,
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            location: 7,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [
                        Node {
                            node: Some(
                                RangeVar(
                                    RangeVar {
                                        catalogname: "",
                                        schemaname: "",
                                        relname: "lseg_tbl",
                                        inh: true,
                                        relpersistence: "p",
                                        alias: None,
                                        location: 14,
                                    },
                                ),
                            ),
                        },
                    ],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 0..22,
        },
    ],
}
